--- a/docs/browser/缓存.md
+++ b/docs/browser/缓存.md
@@ -5,6 +5,57 @@ sidebar_position: 1
 ---
 # 浏览器缓存
 
+浏览器缓存有强制缓存和协商缓存两种。
+
 ## 强制缓存
 
+**概念**
+强制缓存就是向浏览器缓存查找该请求结果，并根据该结果的缓存规则来决定是否使用该缓存结果的过程。
+
+**问1：强制缓存的缓存规则是什么？**
+
+当浏览器向服务器发送请求的时候，服务器会将缓存规则放入HTTP响应的报文的HTTP头中和请求结果一起返回给浏览器，控制强制缓存的字段分别是Expires和Cache-Control，其中Cache-Conctrol的优先级比Expires高。
+
+**问2：Expires是什么？**
+
+Expires是HTTP/1.0控制网页缓存的字段，其值为服务器返回该请求的结果缓存的到期时间，即再次发送请求时，如果客户端的时间小于Expires的值时，直接使用缓存结果。
+
+**问3: Expires是HTTP/1.0的字段，但是现在浏览器的默认使用的是HTTP/1.1，那么在HTTP/1.1中网页缓存还是否由Expires控制？**
+
+到了HTTP/1.1，Expires已经被Cache-Control替代，原因在于Expires控制缓存的原理是使用客户端的时间与服务端返回的时间做对比，如果客户端与服务端的时间由于某些原因（时区不同；客户端和服务端有一方的时间不准确）发生误差，那么强制缓存直接失效，那么强制缓存存在的意义就毫无意义。
+
+**问4: Cache-Control又是如何进行控制的？**
+
+Cache-Control的值为：
+
+（1）public：所有内容都将被缓存（客户端和代理服务器都可缓存）
+（2）private：所有内容只有客户端可以缓存，Cache-Control的默认取值
+（3）no-cache：客户端缓存内容，但是是否使用缓存则需要经过协商缓存来验证决定
+（4）no-store：所有内容都不会被缓存，即不使用强制缓存，也不使用协商缓存
+（5）max-age=xxx (xxx is numeric)：缓存内容将在xxx秒后失效
+
 ## 协商缓存
+
+**概念**
+
+协商缓存就是强制缓存失效后，浏览器携带缓存标识向服务器发起请求，由服务器根据缓存标识决定是否使用缓存的过程
+
+协商缓存的标识是在响应报文的HTTP头中和请求结果一起返回给浏览器的
+
+控制协商缓存的字段分别有：
+  Last-Modified / If-Modified-Since
+  Etag / If-None-Match，
+
+其中Etag / If-None-Match的优先级比Last-Modified / If-Modified-Since高。
+
+#### Last-Modified / If-Modified-Since
+
+（1）Last-Modified是服务器响应请求时，返回该资源文件在服务器最后被修改的时间
+
+（2）If-Modified-Since则是客户端再次发起该请求时，携带上次请求返回的Last-Modified值，通过此字段值告诉服务器该资源上次请求返回的最后被修改时间。服务器收到该请求，发现请求头含有If-Modified-Since字段，则会根据If-Modified-Since的字段值与该资源在服务器的最后被修改时间做对比，若服务器的资源最后被修改时间大于If-Modified-Since的字段值，则重新返回资源，状态码为200；否则则返回304，代表资源无更新，可继续使用缓存文件。
+
+#### Etag / If-None-Match
+
+（1）Etag是服务器响应请求时，返回当前资源文件的一个唯一标识(由服务器生成)
+
+（2）If-None-Match是客户端再次发起该请求时，携带上次请求返回的唯一标识Etag值，通过此字段值告诉服务器该资源上次请求返回的唯一标识值。服务器收到该请求后，发现该请求头中含有If-None-Match，则会根据If-None-Match的字段值与该资源在服务器的Etag值做对比，一致则返回304，代表资源无更新，继续使用缓存文件；不一致则重新返回资源文件，状态码为200
